--- a/qurator/sbb_images/webapp/annotator-config.json
+++ b/qurator/sbb_images/webapp/annotator-config.json
@@ -1,5 +1,6 @@
 {
     "PASSWD_FILE": ".htpasswd",
+    "AUTH_REALM": "annotate",
     "SQLITE_FILE": "stabi-illustrations.sqlite",
     "LABELS": [ "Übriges", "Abbildung", "Photo", "Karte", "Einband", "Stempel/Siegel", "Farb-/Aufl-Tafel",
                 "Initiale","Ornament", "Signatur", "Druckermarke", "Handschrift", "Gesetzter Text", "Noten"],
