--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,12 @@ click
 pandas
 pillow
 gunicorn
-torch==1.2.0
-torchvision==0.4.0
+torch==1.6.0
+torchvision==0.7.0
 matplotlib
 
 # required due to slow inception load
-scipy==1.3.3
+scipy   #==1.3.3
 sklearn
 
 tqdm
