--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,21 @@ click
 pandas
 pillow
 gunicorn
-torch==1.6.0
-torchvision==0.7.0
+torch
+# ==1.7.1
+torchvision
+# ==0.7.0
 matplotlib
 urlmatch
 
 # required due to slow inception load
 scipy   #==1.3.3
-sklearn
+scikit-learn
 
 tqdm
 annoy
 
-umap-learn
+# umap-learn
 
 opencv-contrib-python
-VST
+# VST
