add make target for b32-laion

--- a/qurator/sbb_images/webapp/config/region-annotator-config.json
+++ b/qurator/sbb_images/webapp/config/region-annotator-config.json
@@ -2,7 +2,7 @@
     "PASSWD_FILE": ".htpasswd",
     "AUTH_REALM": "region-annotate",
     "SQLITE_FILE": "region-annotations.sqlite",
-    "ADMIN_USERS": ["root", "cneud", "kpick", "neichenberger", "fostrowski", "klabusch"],
+    "ADMIN_USERS": ["root", "cneud", "kpick", "neichenberger", "fostrowski", "klabusch", "wseifert"],
     "COOPERATIVE_ACCESS": true,
     "COOPERATIVE_MODIFICATION": false
 }
