improve digisam Makefile

--- a/digisam/Makefile
+++ b/digisam/Makefile
@@ -33,21 +33,34 @@ run-service-production:
 	gunicorn --timeout 600 --chdir . --bind 0.0.0.0:4716 qurator.sbb_images.webapp.wsgi_search:app
 
 download:
-	curl -V https://zenodo.org/api/records/2602431/files-archive -o part1.zip
+	echo "Downloading Zenodo archive part 1 ..."
+	curl https://zenodo.org/api/records/2602431/files-archive -o part1.zip
+	echo "Extracting Zenodo archive part 1 ..."
 	7z e part1.zip
 	rm -f part1.zip
-	curl -V https://zenodo.org/api/records/2598145/files-archive -o part2.zip
+	echo "Downloading Zenodo archive part 2 ..."
+	curl https://zenodo.org/api/records/2598145/files-archive -o part2.zip
+	echo "Extracting Zenodo archive part 2 ..."
 	7z e part2.zip
 	rm -f part2.zip
-	curl -V https://zenodo.org/api/records/2598261/files-archive -o part3.zip
-	7z e part3.zip
+	echo "Downloading Zenodo archive part 3 ..."
+	curl https://zenodo.org/api/records/2598261/files-archive -o part3.zip
+	echo "Extracting Zenodo archive part 3 ..."
 	rm -f part3.zip
-	curl -V https://zenodo.org/api/records/2598270/files-archive -o part4.zip
+	echo "Downloading Zenodo archive part 4 ..."
+	curl https://zenodo.org/api/records/2598270/files-archive -o part4.zip
+	echo "Extracting Zenodo archive part 4 ..."
 	7z e part4.zip
 	rm part4.zip
+	echo "Extracting multipart Stabi-illustrations archive ..."
 	7z x extracted_images.zip.001 -oStabi-Illustrationen
 	rm -f extracted_images.zip.*
+	echo "Unpacking extract tar archives ..."
 	for i in Stabi-Illustrationen/*;do tar -xf $$i/`basename $$i`.tar --strip-components 3 --directory Stabi-Illustrationen 2> /dev/null;done
+	echo "Removing tar archives ..."
 	find Stabi-Illustrationen -name "*.tar" -exec rm -f {} \;
+	echo "Downloading MS-CLIP checkpoints and configurations ..."
 	curl https://ravius.sbb.berlin/MS-CLIP/MS-CLIP.tar.gz -o MS-CLIP.tar.gz
+	echo "Extracting MS-CLIP archive ..."
 	tar -xzf MS-CLIP.tar.gz
+	echo "All done."
