--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,6 @@ ICONCLASS==0.10
 multilingual-clip==1.0.10
 clip @ git+https://github.com/openai/CLIP.git
 open_clip_torch==2.29.0
-msclipi @ git+https://github.com/labusch/MSCLIP.git
+msclip @ git+https://github.com/labusch/MSCLIP.git
 XlsxWriter==3.2.0
 
