--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,5 @@ clip @ git+https://github.com/openai/CLIP.git
 open_clip_torch==2.29.0
 msclip @ git+https://github.com/labusch/MSCLIP.git
 XlsxWriter==3.2.0
-
+urlmatch==1.0.1
+dicttoxml==1.7.16
