--- a/qurator/sbb_images/webapp_react/package.json
+++ b/qurator/sbb_images/webapp_react/package.json
@@ -15,16 +15,20 @@
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
+    "cropperjs": "^1.6.2",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.9.1",
     "style-loader": "^3.3.4",
+    "svg-url-loader": "^8.0.0",
     "webpack-dev-server": "^4.15.1"
   }
 }
